test/compile_errors/stage1/obj/wrong_return_type_for_main.zig
pub fn main() f32 { }

// error
// backend=stage1
// target=native
//
// error: expected return type of main to be 'void', '!void', 'noreturn', 'u8', or '!u8'
